Introduce "Primary" Plate Sets (#5321)